// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NoneFound /> renders an info Icon component 1`] = `
<Box>
  <Box
    className="text-center"
  >
    <Icon
      faStyle="fas"
      fixedWidth={false}
      name="info-circle"
      pullRight={false}
    />
     No 
    test
     found
  </Box>
</Box>
`;

exports[`<NoneFound /> when supplied [noListGroup=false] prop renders correctly 1`] = `
<Box>
  <Box
    className="text-center"
  >
    <Icon
      faStyle="fas"
      fixedWidth={false}
      name="info-circle"
      pullRight={false}
    />
     No 
    test
     found
  </Box>
</Box>
`;

exports[`<NoneFound /> when supplied [noListGroup=true] prop renders correctly 1`] = `
<Box
  className="text-center"
>
  <Icon
    faStyle="fas"
    fixedWidth={false}
    name="info-circle"
    pullRight={false}
  />
   No 
  test
   found
</Box>
`;
